# datreader

./: Makefile  Makefile.am  Makefile.in  README.md  aclocal.m4  config.h  config.status  configure  configure.in  datreader.prj.bak  datreader.pws  libtool
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
include/: Makefile  Makefile.am  Makefile.in  t_dat_file.h  t_key_file.h
src/: Makefile  Makefile.am  Makefile.in  datreader.cc
src/.deps/: datreader.Po
