## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjuta project configuration

datreader_includedir = $(pkgincludedir)

datreader_include_DATA = \
	t_dat_file.h\
	t_key_file.h

EXTRA_DIST = $(datreader_include_DATA)
